box shadow and links

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <p>" Front-end developer and an anime lover "</p>
     <ul>
       <li class="box"><a target="_blank" href="https://github.com/yazidtach/">GitHub</a></li>
-      <li class="box"><a target="_blank" href="#">LinkedIn</a></li>
+      <li class="box"><a target="_blank" href="https://www.linkedin.com/in/yazid-tachfini-192a75346/">LinkedIn</a></li>
       <li class="box"><a target="_blank" href="#">Twitter</a></li>
-      <li class="box"><a target="_blank" href="#">Instagram</a></li>
+      <li class="box"><a target="_blank" href="https://www.instagram.com/yazidtach/">Instagram</a></li>
     </ul>
   </div>
 </section>
